(1) functionality for saving default favourites (2) removed the save defaults button

--- a/Data/gui_settings.json
+++ b/Data/gui_settings.json
@@ -1,1 +1,1 @@
-{"default_theme": "GreenTan", "default_start": "03:00 am", "default_end": "11:00 pm", "default_favourites": 0}
+{"default_theme": "NeutralBlue", "default_start": "3:00 pm", "default_end": "8:00 pm", "default_favourites": true}
