implemented new tables and made some minor changes

--- a/Data/gui_settings.json
+++ b/Data/gui_settings.json
@@ -1,1 +1,1 @@
-{"default_theme": "NeutralBlue", "default_start": "3:00 pm", "default_end": "8:00 pm", "default_favourites": true}
+{"default_theme": "NeutralBlue", "default_start": "1:00 pm", "default_end": "9:00 pm", "default_favourites": false}
