--- a/Data/gui_settings.json
+++ b/Data/gui_settings.json
@@ -1,1 +1,1 @@
-{"default_theme": "NeutralBlue", "default_start": "08:00 am", "default_end": "9:00 pm", "default_favourites": false}
+{"default_theme": "LightBlue", "default_start": "08:00 am", "default_end": "9:00 pm", "default_favourites": false}
