improved the preparetion of the table

--- a/Data/gui_settings.json
+++ b/Data/gui_settings.json
@@ -1,1 +1,1 @@
-{"default_theme": "LightBlue", "default_start": "03:00", "default_end": "08:00", "default_favourites": true, "default_start_am": false, "default_end_am": false}
+{"default_theme": "LightBlue", "default_start": "11:00", "default_end": "02:00", "default_favourites": false, "default_start_am": true, "default_end_am": false}
